<resources>
    <string name="app_name">banco de dados</string>
    <string name="btCadastrar">Cadastrar</string>
    <string name="btcadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="txt_nome">Odair</string>
    <string name="Text_Nome">Odair</string>
    <string name="text_Idade">20</string>
    <string name="txt_sobrenome">Gabriel</string>
    <string name="telefone">11 99999-5555</string>
    <string name="todo">TODO</string>
    <string name="atualizar">Atualizar</string>
    <string name="titulo">Cadastros de IMC</string>
    <string name="TextCadastros">Cadastros realizados:</string>
    <string name="TextAtualizacao">Atualização de Cadastro</string>
    <string name="TextCadastro">Cadastro de um Novo Usuário</string>
    <string name="boas_vindas">Bem vindo ao app para definir seu status acadêmico!</string>
    <string name="orientacao">Por favor, clique no botão abaixo para prosseguir</string>
    <string name="notaAlunoView">Insira a nota do Aluno:</string>
</resources>