<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/fundo1"
    tools:context=".CadastroUsuarios">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/titulo"
            android:textColor="@color/textBoasVindas"
            android:textSize="35sp"
            android:textStyle="italic"
            android:gravity="center"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/iconeimc"/>

        <TextView
            android:id="@+id/textAuxilio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Realize o seu cadastro no botão abaixo:"
            android:textColor="@color/textCadastros"
            android:textSize="20sp"
            android:gravity="center" />

        <Button
            android:id="@+id/btCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btCadastrar"
            android:backgroundTint="@color/corbotao1"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:paddingVertical="12dp" />

        <Button
            android:id="@+id/btnVoltarIMC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Tela de boas-vindas"
            android:backgroundTint="@color/corbotao1"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:paddingVertical="12dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/TextCadastros"
            android:textColor="@color/textCadastros"
            android:textSize="20sp"
            android:textStyle="italic"
            android:fontFamily="sans-serif"
            android:gravity="center" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewContatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp" />




    </LinearLayout>
</ScrollView>

